src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@ctest.xml.snap
---
source: src/raw_upload.rs
expression: results
input_file: tests/ctest.xml
---
- framework: ~
  testruns:
    - name: a_unit_test
      classname: a_unit_test
      duration: 33.4734
      outcome: Failure
      testsuite: Linux-c++
      failure_message: Failed
      filename: ~
      build_url: ~
      computed_name: "a_unit_test::a_unit_test"
      properties: ~
  warnings: []
