src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@empty_failure.junit.xml.snap
---
source: src/raw_upload.rs
expression: results
input_file: tests/empty_failure.junit.xml
---
- framework: ~
  testruns:
    - name: test.test works
      classname: test.test
      duration: 0.234
      outcome: Pass
      testsuite: test
      failure_message: ~
      filename: "./test.rb"
      build_url: ~
      computed_name: "test.test::test.test works"
      properties: ~
    - name: test.test fails
      classname: test.test
      duration: 1
      outcome: Failure
      testsuite: test
      failure_message: TestError
      filename: "./test.rb"
      build_url: ~
      computed_name: "test.test::test.test fails"
      properties: ~
  warnings: []
