src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@windows.junit.xml.snap
---
source: src/raw_upload.rs
expression: results
input_file: tests/windows.junit.xml
---
- framework: ~
  testruns: []
  warnings: []
